--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 <p>War and conflicts result in harmful aftermaths, resulting in negative economic and psychological effects. Currently, tensions seem to be rising around the world and concerns of another potential world war are raised. But is there any way to determine when a future conflict will occur? Or even potentially limit these conflicts?</p>
 
 <p>The goal of this research is to predict the outbreak of future international conflicts.</p>
+
+<p>TESTING</p>
         </article>
       </div>
     </div>
