Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -35,11 +35,6 @@
         </div>
         <article class="markdown-body">
           <h1>
-<a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h1>
-
-<p>Today, countries are connected in many ways besides geographical proximity. How do these network connections change how war propagates? This project analyzes trends of factors possibly related to conflict in order to determine key significant factors in the beginning of major conflicts. This research will investigate potential contributors to the dynamics of war.</p>
-
-<h1>
 <a id="motivation" class="anchor" href="#motivation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Motivation</h1>
 
 <p>War and conflicts result in harmful aftermaths, resulting in negative economic and psychological effects. Currently, tensions seem to be rising around the world and concerns of another potential world war are raised. But is there any way to determine when a future conflict will occur? Or even potentially limit these conflicts?</p>
@@ -47,6 +42,41 @@
 <p>The goal of this research is to predict the outbreak of future international conflicts.</p>
 
 <hr>
+
+<h1>
+<a id="about" class="anchor" href="#about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>About</h1>
+
+<p>Today, countries are connected in many ways besides geographical proximity. How do these network connections change how war propagates? This project analyzes trends of factors possibly related to conflict in order to determine key significant factors in the beginning of major conflicts. This research will investigate potential contributors to the dynamics of war.</p>
+
+<h1>
+<a id="network-model" class="anchor" href="#network-model" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network Model</h1>
+
+<p>(picture goes here)</p>
+
+<h1>
+<a id="correlations-to-war" class="anchor" href="#correlations-to-war" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Correlations to War</h1>
+
+<h2>
+<a id="state-of-the-country" class="anchor" href="#state-of-the-country" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>State of the Country</h2>
+
+<p>(time lapse of state of country)</p>
+
+<h2>
+<a id="number-of-neighbors" class="anchor" href="#number-of-neighbors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Number of Neighbors</h2>
+
+<p>(Distribution of countries and their neighbors) </p>
+
+<h2>
+<a id="number-of-border-changes" class="anchor" href="#number-of-border-changes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Number of Border Changes</h2>
+
+<p>(time lapse of border changes)</p>
+
+<p>(time lapse of zones in conflict)</p>
+
+<h1>
+<a id="current-work" class="anchor" href="#current-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Work</h1>
+
+<p>Ongoing work includes collection and quantification of other potential correlating factors, such as quantifying the development of individual countries. However, one of the challenges for some of this data collection is deciding how to best quantify, essentially subjective data in the most objective manner. Perhaps, looking at the life expectancy of the population may provide quantitative insight into the development of countries, instead of using the historically defined First, Second and Third World countries.</p>
         </article>
       </div>
     </div>
