--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
 <p>(time lapse of zones in conflict)</p>
 
+[![IMAGE ALT TEXT HERE](https://youtu.be/1hsDn2kNriI?t=4m2s/0.jpg)](https://youtu.be/1hsDn2kNriI?t=4m2s)
+
 <h1>
 <a id="current-work" class="anchor" href="#current-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Work</h1>
 
