--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 
 <p>(time lapse of zones in conflict)</p>
 
+<a href="https://youtu.be/1hsDn2kNriI?t=4m2s
+" target="_blank"><img src="http://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg" 
+alt="IMAGE ALT TEXT HERE" width="240" height="180" border="10" /></a>
+
+
 [link name](https://youtu.be/1hsDn2kNriI?t=4m2s)
 
 <h1>
