--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
 <p>(time lapse of zones in conflict)</p>
 
 <a href="https://youtu.be/1hsDn2kNriI?t=4m2s
-" target="_blank"><img src="http://img.youtube.com/vi/YOUTUBE_VIDEO_ID_HERE/0.jpg" 
+" target="_blank"><img src="http://img.youtube.com/vi/https://youtu.be/1hsDn2kNriI/0.jpg" 
 alt="IMAGE ALT TEXT HERE" width="240" height="180" border="10" /></a>
 
-
-[link name](https://youtu.be/1hsDn2kNriI?t=4m2s)
 
 <h1>
 <a id="current-work" class="anchor" href="#current-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Work</h1>
