--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 
 <p>(time lapse of zones in conflict)</p>
 
+<a href="https://youtu.be/e8OEuj6-pVg
+"
+alt="IMAGE ALT TEXT HERE" width="240" height="180" border="10" /></a>
+
 <h1>
 <a id="current-work" class="anchor" href="#current-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Work</h1>
 
