--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
 "
 alt="IMAGE ALT TEXT HERE" width="240" height="180" border="10" /></a>
 
+<a href="https://youtu.be/e8OEuj6-pVg
+" target="_blank"><img src="https://youtu.be/e8OEuj6-pVg.jpg" 
+alt="IMAGE ALT TEXT HERE" width="240" height="180" border="10" /></a>
+
 <h1>
 <a id="current-work" class="anchor" href="#current-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Work</h1>
 
