--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
 <h2>
 <a id="number-of-border-changes" class="anchor" href="#number-of-border-changes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Number of Border Changes</h2>
 
-<p>(time lapse of border changes)</p>
-
-<p>(time lapse of zones in conflict)</p>
-
-<a href="https://youtu.be/e8OEuj6-pVg
-"
-alt="IMAGE ALT TEXT HERE" width="240" height="180" border="10" /></a>
+<p>(Time lapse of border changes)</p>
 
 <a href="https://youtu.be/e8OEuj6-pVg
 " target="_blank"><img src="https://youtu.be/e8OEuj6-pVg.jpg" 
 alt="IMAGE ALT TEXT HERE" width="240" height="180" border="10" /></a>
+
+<p>(Time lapse of zones in conflict)</p>
+
+<a href="https://youtu.be/1hsDn2kNriI?t=4m2s
+" target="_blank"><img src="https://youtu.be/1hsDn2kNriI?t=4m2s.jpg" 
+alt="IMAGE ALT TEXT HERE" width="720" height="540" border="10" /></a>
 
 <h1>
 <a id="current-work" class="anchor" href="#current-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Work</h1>
