--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 <h2>
 <a id="number-of-border-changes" class="anchor" href="#number-of-border-changes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Number of Border Changes</h2>
 
-<p>(Time lapse of border changes)</p>
+<p>Time lapse of border changes</p>
 
 <a href="https://youtu.be/e8OEuj6-pVg
 " target="_blank"><img src="https://youtu.be/e8OEuj6-pVg.jpg" 
 alt="IMAGE ALT TEXT HERE" width="240" height="180" border="10" /></a>
 
-<p>(Time lapse of zones in conflict)</p>
+<p>Time lapse of zones in conflict</p>
 
 <a href="https://youtu.be/1hsDn2kNriI?t=4m2s
 " target="_blank"><img src="https://youtu.be/1hsDn2kNriI?t=4m2s.jpg" 
