--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 <h2>
 <a id="number-of-border-changes" class="anchor" href="#number-of-border-changes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Number of Border Changes</h2>
 
-<p>Time lapse of border changes</p>
+<p>Time Lapse of Border Changes (Youtube)</p>
 
 <a href="https://youtu.be/e8OEuj6-pVg
 " target="_blank"><img src="https://cloud.githubusercontent.com/assets/16950425/13060295/56eae90c-d3fe-11e5-9e15-3b7869737828.jpg" 
 alt="IMAGE ALT TEXT HERE" width="720" height="360" border="10" /></a>
 
-<p>Time lapse of zones in conflict</p>
+<p>Time Lapse of Zones in Conflict (Youtube)</p>
 
 <a href="https://youtu.be/1hsDn2kNriI?t=4m2s
 " target="_blank"><img src="https://cloud.githubusercontent.com/assets/16950425/13060132/40a94e00-d3fd-11e5-94d8-9223a21ee8a7.jpg" 
