--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <h1>
 <a id="network-model" class="anchor" href="#network-model" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network Model</h1>
 
-[[https://cloud.githubusercontent.com/assets/16950425/13231454/f7b1848a-d977-11e5-8151-730a1f42ccd2.png]]
+<img src="https://cloud.githubusercontent.com/assets/16950425/13231454/f7b1848a-d977-11e5-8151-730a1f42ccd2.png">
 
 <h1>
 <a id="correlations-to-war" class="anchor" href="#correlations-to-war" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Correlations to War</h1>
