--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
 ![Network Model](https://cloud.githubusercontent.com/assets/16950425/13231454/f7b1848a-d977-11e5-8151-730a1f42ccd2.png "Network Model")
 
+<a><img src="https://cloud.githubusercontent.com/assets/16950425/13060132/40a94e00-d3fd-11e5-94d8-9223a21ee8a7.jpg" 
+alt="IMAGE ALT TEXT HERE" width="720" height="360" border="10" /></a>
+
 <h1>
 <a id="correlations-to-war" class="anchor" href="#correlations-to-war" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Correlations to War</h1>
 
