--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
 <h1>
 <a id="network-model" class="anchor" href="#network-model" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Network Model</h1>
 
-![Network Model](https://cloud.githubusercontent.com/assets/16950425/13231454/f7b1848a-d977-11e5-8151-730a1f42ccd2.png "Network Model")
-
-<a><img src="https://cloud.githubusercontent.com/assets/16950425/13060132/40a94e00-d3fd-11e5-94d8-9223a21ee8a7.jpg" /></a>
+<a><img src="https://cloud.githubusercontent.com/assets/16950425/13231454/f7b1848a-d977-11e5-8151-730a1f42ccd2.png" /></a>
 
 <h1>
 <a id="correlations-to-war" class="anchor" href="#correlations-to-war" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Correlations to War</h1>
@@ -66,10 +64,12 @@
 <h2>
 <a id="number-of-neighbors" class="anchor" href="#number-of-neighbors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Number of Neighbors</h2>
 
-<p>(Distribution of countries and their neighbors) </p>
+<a><img src="https://cloud.githubusercontent.com/assets/16950425/13231526/4463f9e8-d978-11e5-8ab2-073f55ef083c.jpg" /></a>
 
 <h2>
 <a id="number-of-border-changes" class="anchor" href="#number-of-border-changes" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Number of Border Changes</h2>
+
+<a><img src="https://cloud.githubusercontent.com/assets/16950425/13231526/4463f9e8-d978-11e5-8ab2-073f55ef083c.jpg" /></a>
 
 <p>Time Lapse of Border Changes (Youtube)</p>
 
@@ -82,6 +82,11 @@ alt="IMAGE ALT TEXT HERE" width="720" height="360" border="10" /></a>
 <a href="https://youtu.be/1hsDn2kNriI?t=4m2s
 " target="_blank"><img src="https://cloud.githubusercontent.com/assets/16950425/13060132/40a94e00-d3fd-11e5-94d8-9223a21ee8a7.jpg" 
 alt="IMAGE ALT TEXT HERE" width="720" height="360" border="10" /></a>
+
+<p>Correlation between Border Changes and Conflict Levels</p>
+
+<a><img src="https://cloud.githubusercontent.com/assets/16950425/13231518/39bbc188-d978-11e5-96a6-36bc0edb2059.png" /></a>
+
 
 <h1>
 <a id="current-work" class="anchor" href="#current-work" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Current Work</h1>
