--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ alt="IMAGE ALT TEXT HERE" width="720" height="360" border="10" /></a>
 " target="_blank"><img src="https://cloud.githubusercontent.com/assets/16950425/13060132/40a94e00-d3fd-11e5-94d8-9223a21ee8a7.jpg" 
 alt="IMAGE ALT TEXT HERE" width="720" height="360" border="10" /></a>
 
-<p>Correlation between Border Changes and Conflict Levels</p>
+<h2>
+<a id="correlation-between-border-changes-and-conflict-levels" class="anchor" href="#correlation-between-border-changes-and-conflict-levels" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Correlation between Border Changes and Conflict Levels</h2>
 
 <a><img src="https://cloud.githubusercontent.com/assets/16950425/13231518/39bbc188-d978-11e5-96a6-36bc0edb2059.png" /></a>
 
